# the-archivist

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.cursor/plans/: archivist_chat_enhancement_7fab824b.plan.md  backend_gap_remediation_5f668750.plan.md  backend_idiom_analysis_4e6c80d4.plan.md  backend_review_gaps_fec4c5cd.plan.md  chat_ux_enhancements_a80255cf.plan.md  frontend_unit_tests_4c5e2897.plan.md  language_framework_adr_73a1dd08.plan.md  milestone_1_scaffold_047ba8f6.plan.md  milestone_2_document_api_vn67lk01.plan.md  milestone_3_processing_pipeline_b7849493.plan.md  milestone_4_agent_chat_31d8d6de.plan.md  milestone_5_doc_ui_50805823.plan.md  milestone_6_chat_ui_1909b043.plan.md  notebooklm_implementation_plan_c45168f4.plan.md  poe2_wiki_frontend_af7ea4ea.plan.md  polish_and_signals_e59cfa0d.plan.md  rag_retrieval_improvements_cb698343.plan.md  rag_retrieval_quality_c7619e3c.plan.md  strip_version_history_noise_db00bf6b.plan.md  wiki_aware_chunking_strategy.plan.md
.cursor/rules/: assessment.mdc  code-review.mdc  core.mdc  git-discipline.mdc  glossary.mdc  plan-format.mdc  planning.mdc  testing.mdc
.docs/: DECISIONS.md  PROMPT.md
.docs/adr/: 0001-use-python-fastapi-react.md  0002-data-storage-strategy.md  0003-document-processing-and-embedding.md  0004-langgraph-agent-architecture.md  0005-rag-retrieval-improvements.md  0006-hybrid-search-and-retrieval-quality.md  0007-frontend-routing-and-page-architecture.md  0008-poe2-design-system-approach.md  0009-frontend-test-framework.md  0010-anthropic-llm-integration.md  0011-wiki-aware-chunking.md  README.md
.github/: dependabot.yml
.github/workflows/: backend.yml  docker.yml  frontend.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_documents_table.py  0002_create_chunks_table.py  0003_create_conversations_table.py  0004_create_messages_table.py  0005_add_section_heading_to_chunks.py  0006_add_search_vector_to_chunks.py  0007_convert_ids_to_native_uuid.py
backend/app/: config.py  main.py
backend/app/agent/: graph.py  llm.py
backend/app/api/: conversations.py  documents.py  health.py  search.py
backend/app/db/: models.py  session.py
backend/app/models/: conversation.py  document.py
backend/app/services/: conversation_service.py  document_service.py  embedding.py  processing.py  retrieval.py  text_extraction.py
backend/tests/: conftest.py  test_agent.py  test_content_search_related.py  test_conversations.py  test_documents.py  test_health.py  test_processing.py  test_retrieval.py  test_text_extraction.py
backend/tests/fixtures/: sample.md  sample.txt
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: content.ts  conversations.ts  documents.ts  errors.ts  search.ts
scripts/: fetch_poe_wiki.py  requirements.txt  seed_documents.py  seed_wiki.py
scripts/tests/: test_seed_wiki.py
(+35 files in other folders)
