[project]
name = "notebooklm-backend"
version = "0.1.0"
description = "Backend for a simplified NotebookLM — document upload, RAG-powered chat"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "pypdf>=5.0",
    "langchain-text-splitters>=0.3",
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
    "pgvector>=0.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-anthropic>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.9",
    "ruff>=0.11",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["E402"]
"app/main.py" = ["E402"]
"app/api/**" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
